--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -24,15 +24,18 @@
                 <?php if ($this->identity()): ?>
                     <p><?php var_dump($this->identity()) ?></p>
                 <?php else: ?>
-                    <p>Your are not authticated</p>
+                    <p>Your are not authenticated</p>
                 <?php endif ?>
             </div>
         </div>
     </div>
 </div>
 
-<div class="row">
+<hr/>
 
+<h3>Route guards</h3>
+
+<div class="row">
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -52,7 +55,6 @@
             </div>
         </div>
     </div>
-
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -72,7 +74,6 @@
             </div>
         </div>
     </div>
-
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
