--- a/module/Application/view/application/index/admin-only.phtml
+++ b/module/Application/view/application/index/admin-only.phtml
@@ -1,3 +1,4 @@
 <div class="row">
     <h3>Welcome to this protected page</h3>
+    <p>This page is accesible if you are in the group "admin" or his parent role.</p>
 </div>
