--- a/module/Application/view/application/widgets/identity-details.phtml
+++ b/module/Application/view/application/widgets/identity-details.phtml
@@ -3,7 +3,7 @@
     <li>Roles :
         <ul>
             <?php foreach ($this->roles as $role): ?>
-                <li><?php echo $role ?></li>
+                <li><?php echo $role->getName() ?></li>
             <?php endforeach ?>
         </ul>
     </li>
