--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,21 +1,17 @@
-<div class="jumbotron">
-    <h1>
-        <?php echo 'Welcome to ZfcRbac Application' ?>
-    </h1>
-
-    <p>
-        <?php echo 'Congratulations! You have successfully installed the ZfcRbac Application.' ?>
-    </p>
-
-    <p>
-        <a class="btn btn-success btn-lg" href="https://github.com/jmleroux/zfc-rbac-application" target="_blank">
-            <?php echo 'ZfcRbac Application on GitHub' ?> &raquo;
-        </a>
-    </p>
-</div>
-
 <div class="row">
-    <div class="col-md-12">
+    <div class="jumbotron col-md-8">
+        <h1>
+            <?php echo 'ZfcRbac Application' ?>
+        </h1>
+
+        <p>
+            <a class="btn btn-success btn-lg" href="https://github.com/jmleroux/zfc-rbac-application" target="_blank">
+                <?php echo 'ZfcRbac Application on GitHub' ?> &raquo;
+            </a>
+        </p>
+    </div>
+
+    <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">Your identity</h3>
@@ -26,8 +22,6 @@
         </div>
     </div>
 </div>
-
-<hr/>
 
 <h3>Route guards - role based</h3>
 
@@ -118,25 +112,6 @@
     <div class="col-md-3">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Read route</h3>
-            </div>
-            <div class="panel-body">
-                <p>
-                    A route only for users with the "read" permission
-                </p>
-
-                <p>
-                    <a class="btn btn-success pull-right"
-                       href="<?php echo $this->url('read-permission') ?>">
-                        Test &raquo;
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="panel panel-default">
-            <div class="panel-heading">
                 <h3 class="panel-title">Update route</h3>
             </div>
             <div class="panel-body">
@@ -166,6 +141,31 @@
                 <p>
                     <a class="btn btn-success pull-right"
                        href="<?php echo $this->url('delete-permission') ?>">
+                        Test &raquo;
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h3>Route guards - permission based + Controller Guard - role based</h3>
+
+<div class="row">
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Read route</h3>
+            </div>
+            <div class="panel-body">
+                <ul>
+                    <li>The route is only accessible for users with the "read" permission.</li>
+                    <li>The controller is only accessible for users with the "member" role.</li>
+                </ul>
+
+                <p>
+                    <a class="btn btn-success pull-right"
+                       href="<?php echo $this->url('read-permission') ?>">
                         Test &raquo;
                     </a>
                 </p>
